tests/NormalTests/paczka2/big_fuzzy/81813580.err
Error in line 2: 8FQXZS A492 20,1
Error in line 3: 7jV5ZS4aJ9B A492 88,9
Error in line 5: 8FQXZS A750 4,1
Error in line 4: K58toP0wAlj S486 45,0
Error in line 12: Ajey5 A492 14,66
Error in line 9: 8FQXZS S486 7,1
Error in line 18: K58toP0wAlj S789 17,9
Error in line 15: Ajey5 A492 46,0
Error in line 21: S789 S486 75,4
Error in line 31: S789 A750 13,4
Error in line 30: 8FQXZS S789 9,3
Error in line 46: K58toP0wAlj A492 35,2
Error in line 34: S789 A492 92,5
Error in line 59: 4QQx A492 25,5
Error in line 61: 4QQx S789 33,1
Error in line 55: K58toP0wAlj S486 14,2
Error in line 45: XAprPs A492 74,0
Error in line 62: 4QQx S486 58,2
Error in line 60: Ajey5 S789 148,6
Error in line 69: 4QQx A750 48,0
Error in line 82: 4QQx A750 27,0
Error in line 81: 8FQXZS A750 45,1
Error in line 94: 7jV5ZS4aJ9B S486 41,71
Error in line 92: XAprPs A750 14,0
Error in line 97: 7jV5ZS4aJ9B S789 84,1
Error in line 99: XAprPs S789 16,2
Error in line 108: 7jV5ZS4aJ9B A750 20,8
Error in line 109: 8FQXZS S486 56,9
Error in line 143: 8FQXZS S789 68,2
Error in line 149: 8FQXZS S486 8,3
Error in line 147: XAprPs A750 82,2
Error in line 151: 8FQXZS A492 29,6
Error in line 159: 7jV5ZS4aJ9B S486 127,7
Error in line 163: 7jV5ZS4aJ9B S789 32,4
Error in line 167: K58toP0wAlj A492 9,3
Error in line 162: XAprPs A750 74,9
Error in line 156: 4QQx A750 75,8
Error in line 205: 7jV5ZS&aJ9B A&92 26,0
Error in line 202: 7jV5ZS4aJ9B A492 98,3
Error in line 212: 8FQXZS S789 T83,8
Error in line 210: 7jV5ZS4aJ9B S486 34,4
Error in line 203: Ajey5 A492 32,4
Error in line 221: XAprPs A750 23,4
Error in line 222: 7jV5ZS4aJ9B A750 33,5
Error in line 235: 7jV5ZS4aJ9B S789 29,3
Error in line 240: S789 A492 90,3
Error in line 244: S789 A750 55,7
